// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridLines renders horizontal grid lines with four ticks 1`] = `
<g class="ez-grid-lines">
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(0.5, 0)"
    x2="0"
    y2="600"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(200.5, 0)"
    x2="0"
    y2="600"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(400.5, 0)"
    x2="0"
    y2="600"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(600.5, 0)"
    x2="0"
    y2="600"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(800.5, 0)"
    x2="0"
    y2="600"
  >
  </line>
</g>
`;

exports[`GridLines renders vertical grid lines with four ticks 1`] = `
<g class="ez-grid-lines">
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(0, 600.5)"
    x2="800"
    y2="0"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(0, 400.50000000000006)"
    x2="800"
    y2="0"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(0, 200.50000000000003)"
    x2="800"
    y2="0"
  >
  </line>
  <line
    class="ez-grid-line"
    stroke="#a8a8a8"
    transform="translate(0, 0.5)"
    x2="800"
    y2="0"
  >
  </line>
</g>
`;
